added a search bar for filtering and searching

--- a/newapp/templates/newapp/movies_list.html
+++ b/newapp/templates/newapp/movies_list.html
@@ -1,3 +1,8 @@
+<form action="" method="GET">
+    <input type="search" name="movie_name">
+    <button type="submit"> Search </button>
+</form>
+
 {% for item in movie_objects %}
     {{ item.name }}
     </br>
